# cuneo

./: README.md  System-Aufzeichnung aus 2025-05-31 12:50:58.syscap  com.github.heidefinnischen.cuneo.json  io.github.heidefinnischen.cuneo.json  meson.build
data/: com.github.heidefinnischen.cuneo.desktop.in  com.github.heidefinnischen.cuneo.gschema.xml  com.github.heidefinnischen.cuneo.metainfo.xml.in  com.github.heidefinnischen.cuneo.service.in  data.gresource.xml  io.github.heidefinnischen.cuneo.desktop.in  io.github.heidefinnischen.cuneo.gschema.xml  io.github.heidefinnischen.cuneo.metainfo.xml.in  io.github.heidefinnischen.cuneo.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  cuneo.pot  de.po  de.po~  meson.build  nl.po  ru.po
src/: calculation-page.ui  calculation-stack.ui  calculation_math.py  calculation_page.py  calculation_stack.py  conversion-page.ui  conversion-stack.ui  conversion.py  conversion_math.py  conversion_page.py  conversion_stack.py  conversion_units.py  cuneo.gresource.xml  cuneo.in  history-window.ui  history_window.py  magic.py  main.py  math.py  meson.build  style-dark.css  style-hc-dark.css  style-hc.css  style.css  token.py  ui.py  units.py  window.py  window.ui
src/gtk/: help-overlay.ui
